--- a/l3rd.html
+++ b/l3rd.html
@@ -21,8 +21,8 @@
             <div class="left">Left</div>
             <div class="right">Right</div>
           </div>
-          <video class="backgroundVid" autoplay loop>
-            <source src="assets/video/loop.mp4" type="video/mp4">
+          <video class="backgroundVid" loop>
+            <source src="assets/video/loop.ogg" type="video/ogg">
             </source>
           </video>
           <div id="primary"></div>
